[package]
name = "byte_bard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
proxy = { path = "../proxy" }
ui = { path = "../ui" }
egui = "0.26.2"
eframe = "0.26.2"